--- a/signup.html
+++ b/signup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
   <head>
     <title>Sign Up</title>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
       h1 {
         text-transform: capitalize;
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-        text-shadow: 0cap;
+        text-shadow: 0 0 3px #000;
         position: relative;
         color: coral;
       }
@@ -19,10 +19,10 @@
   </head>
   <body>
     <h1>SIGN UP</h1>
-    <form action="process_signup.php " method="post" novalidate>
+    <form action="process_signup.php" method="post" novalidate>
       <div>
         <label for="name">Name</label>
-        <input typ="text" id="name" name="name" />
+        <input type="text" id="name" name="name" />
       </div>
       <div>
         <label for="email">Email</label>
@@ -40,9 +40,8 @@
           name="password_confirmation"
         />
       </div>
-
       <div>
-        <button>Submit</button>
+        <button type="submit">Submit</button>
       </div>
     </form>
   </body>
